[package]
name = "my-little-eval"
version = "0.1.0"
authors = ["Jonas Seifried"]
edition = "2021"
description = "A little library for evaluating mathematical expressions"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
